maquetamos kitchening al 100%

--- a/views/index.html
+++ b/views/index.html
@@ -5,8 +5,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kitchening</title>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/20f0c7215e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <div><!-- Usamos div como caja para contener a la imagen y modificarla a nuestro gusto -->
+            <img src="/images/logo.jpg" alt="Logo Kitchening">
+        </div>
+        <button><i class="fas fa-hamburger"></i></button>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Quienes</a></li>
+            <li><a href="#">Servicios</a></li>
+            <li><a href="#">Porfolio</a></li>
+            <li><a href="#">Sucursales</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </header>
+    <main>
+        <section>
+            <!-- 1 -->
+            <article>
+                <div>
+                    <img src="/images/img-pdto-1.jpg" alt="">
+                </div>
+                <h3>Lorem ipsum amet</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
+                <a href="#"></a><button>ver más</button></a>
+            </article>
+            <!-- 2 -->
+            <article>
+                <div>
+                    <img src="/images/img-pdto-2.jpg" alt="">
+                </div>
+                <h3>Lorem ipsum amet</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
+                <a href="#"></a><button>ver más</button></a>
+            </article>
+            <!-- 3 -->
+            <article>
+                <div>
+                    <img src="/images/img-pdto-3.jpg" alt="">
+                </div>
+                <h3>Lorem ipsum amet</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
+                <a href="#"></a><button>ver más</button></a>
+            </article>
+            <!-- 4 -->
+            <article>
+                <div>
+                    <img src="/images/img-pdto-1.jpg" alt="">
+                </div>
+                <h3>Lorem ipsum amet</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
+                <a href="#"></a><button>ver más</button></a>
+            </article>
+            <!-- 5 -->
+            <article>
+                <div>
+                    <img src="/images/img-pdto-2.jpg" alt="">
+                </div>
+                <h3>Lorem ipsum amet</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
+                <a href="#"></a><button>ver más</button></a>
+            </article>
+            <!-- 6 -->
+            <article>
+                <div>
+                    <img src="/images/img-pdto-3.jpg" alt="">
+                </div>
+                <h3>Lorem ipsum amet</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
+                <a href="#"></a><button>ver más</button></a>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Quienes</a></li>
+            <li><a href="#">Servicios</a></li>
+            <li><a href="#">Porfolio</a></li>
+            <li><a href="#">Sucursales</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
