Hacemos tanto el header como el footer de la pagina

--- a/views/index.html
+++ b/views/index.html
@@ -7,10 +7,12 @@
     <title>Kitchening</title>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/20f0c7215e.js" crossorigin="anonymous"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
+<body class="home">
     <header>
-        <div><!-- Usamos div como caja para contener a la imagen y modificarla a nuestro gusto -->
+        <div class="logo"><!-- Usamos div como caja para contener a la imagen y modificarla a nuestro gusto -->
             <img src="/images/logo.jpg" alt="Logo Kitchening">
         </div>
         <button><i class="fas fa-hamburger"></i></button>
