Subo la primer parte de kitchening

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,5 +1,5 @@
 footer{
-    
+
 }
 
 .home footer ul li{
@@ -13,3 +13,5 @@ footer{
     color: var(--colorBlanco);
     text-transform: uppercase;
 }
+
+/* Esta es la primer parte de kitchening */
