--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,8 @@
     <title>Kitchening</title>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/20f0c7215e.js" crossorigin="anonymous"></script>
+    <!-- Normalize -->
+    <link rel="stylesheet" href="/public/css/">
     <!-- CSS -->
     <link rel="stylesheet" href="/css/styles.css">
 </head>
