Subo cambios de la clase 32

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,19 @@
-.home{
+.home main{
 
+}
+
+.home main section article{
+    margin: 20px 0;
+}
+.home main section article{
+
+}
+
+
+.home main section  img{
+    width: 100%;
+}
+
+.home main section h3{
+    margin:15px 0;
 }
