--- a/views/index.html
+++ b/views/index.html
@@ -7,8 +7,6 @@
     <title>Kitchening</title>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/20f0c7215e.js" crossorigin="anonymous"></script>
-    <!-- Normalize -->
-    <link rel="stylesheet" href="/public/css/">
     <!-- CSS -->
     <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -31,7 +29,7 @@
         <section>
             <!-- 1 -->
             <article>
-                <div>
+                <div class="image">
                     <img src="/images/img-pdto-1.jpg" alt="">
                 </div>
                 <h3>Lorem ipsum amet</h3>
