Estilos en version mobile terminado

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -8,6 +8,7 @@ text-align: center;
 
 .home header .logo img{
     border-radius: 50%;
+    border: 1px solid var(--colorGris);
 }
 
 .home header button{
