--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,18 +2,56 @@
 
 }
 
+.home main .banner{
+    display: none;
+}
+
 .home main section article{
     margin: 20px 0;
 }
 .home main section article{
-
+    position: relative;
 }
 
 
-.home main section  img{
+.home main section .producto{
     width: 100%;
+}
+
+.home main section .etiqueta{
+    position: absolute;
+    top:0;
+    right:15px;
 }
 
 .home main section h3{
     margin:15px 0;
 }
+
+.home main section p{
+    color: var(--colorGris);
+}
+
+.home main section a{
+    color: var(--colorBlanco);
+    background-color: var(--colorGris);
+    display:inline-block;
+    margin: 20px 0 0;
+    /* max-width:75px */
+    /* text-align: center; */
+    padding: 10px;
+}
+.home main section .ampliar{
+    display:block ;
+    text-align: center;
+    /* opacity: 75%; */
+    position:absolute;
+    top:20%;
+    /* padding: 10px 165px; */
+    width: 100%;
+    background-color: var(--colorTransparente);
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.home main section {}
