--- a/views/index.html
+++ b/views/index.html
@@ -26,60 +26,75 @@
         </ul>
     </header>
     <main>
+        <div class="banner">
+            <img src="/images/img-banner.jpg" alt="">
+        </div>
         <section>
             <!-- 1 -->
             <article>
                 <div class="image">
-                    <img src="/images/img-pdto-1.jpg" alt="">
+                    <img class="producto" src="/images/img-pdto-1.jpg" alt="">
+                    <img class="etiqueta" src="/images/img-nuevo.png" alt="">
+                    <a href="/" class="ampliar">ampliar foto</a>
                 </div>
                 <h3>Lorem ipsum amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
-                <a href="#"></a><button>ver más</button></a>
+                <a href="#">ver más</a>
             </article>
             <!-- 2 -->
             <article>
                 <div>
-                    <img src="/images/img-pdto-2.jpg" alt="">
+                    <img class="producto" src="/images/img-pdto-2.jpg" alt="">
+                    <img class="etiqueta" src="/images/img-gratis.png" alt="">
+                    <a href="/" class="ampliar">ampliar foto</a>
                 </div>
                 <h3>Lorem ipsum amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
-                <a href="#"></a><button>ver más</button></a>
+                <a href="#">ver más</a>
             </article>
             <!-- 3 -->
             <article>
                 <div>
-                    <img src="/images/img-pdto-3.jpg" alt="">
+                    <img class="producto" src="/images/img-pdto-3.jpg" alt="">
+                    <img class="etiqueta" src="/images/img-descuento.png" alt="">
+                    <a href="">ampliar foto</a>
                 </div>
                 <h3>Lorem ipsum amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
-                <a href="#"></a><button>ver más</button></a>
+                <a href="#">ver más</a>
             </article>
             <!-- 4 -->
             <article>
                 <div>
-                    <img src="/images/img-pdto-1.jpg" alt="">
+                    <img class="producto" src="/images/img-pdto-1.jpg" alt="">
+                    <img class="etiqueta" src="/images/img-nuevo.png" alt="">
+                    <a href="/" class="ampliar">ampliar foto</a>
                 </div>
                 <h3>Lorem ipsum amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
-                <a href="#"></a><button>ver más</button></a>
+                <a href="#">ver más</a>
             </article>
             <!-- 5 -->
             <article>
                 <div>
-                    <img src="/images/img-pdto-2.jpg" alt="">
+                    <img class="producto" src="/images/img-pdto-2.jpg" alt="">
+                    <img class="etiqueta" src="/images/img-gratis.png" alt="">
+                    <a href="/" class="ampliar">ampliar foto</a>
                 </div>
                 <h3>Lorem ipsum amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
-                <a href="#"></a><button>ver más</button></a>
+                <a href="#">ver más</a>
             </article>
             <!-- 6 -->
             <article>
                 <div>
-                    <img src="/images/img-pdto-3.jpg" alt="">
+                    <img class="producto" src="/images/img-pdto-3.jpg" alt="">
+                    <img class="etiqueta" src="/images/img-descuento.png" alt="">
+                    <a href="/" class="ampliar">ampliar foto</a>
                 </div>
                 <h3>Lorem ipsum amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
-                <a href="#"></a><button>ver más</button></a>
+                <a href="#">ver más</a>
             </article>
         </section>
     </main>
