--- a/public/css/general.css
+++ b/public/css/general.css
@@ -2,6 +2,7 @@
     background-image: url('../images/bg-body.png');
     width: 94%;
     margin: 0 auto;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 *{
