kitchening parte 2 terminado

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,3 +55,14 @@
 }
 
 .home main section {}
+
+/* Tablet */
+
+@media (min-width: 460px){
+    .home main .banner{
+        display: block;
+    }
+    .home main .banner img{
+        width: 100%;
+    }
+}
