--- a/public/css/header.css
+++ b/public/css/header.css
@@ -33,3 +33,11 @@ text-align: center;
     color: var(--colorBlanco);
     text-transform: uppercase;
 }
+
+/* Tablet */
+
+@media (min-width: 460px){
+    .home main button{
+        display: none;
+    }
+}
