Acomodo las media cueries en header y main

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -37,7 +37,7 @@ text-align: center;
 /* Tablet */
 
 @media (min-width: 460px){
-    .home main button{
+    .home header button{
         display: none;
     }
 }
