Termino segunda parte del trabajo en clase Kitchening

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -27,7 +27,7 @@ text-align: center;
     padding: 10px;
     margin: 2px 0;
 
-} 
+}
 
 .home header ul li a{
     color: var(--colorBlanco);
@@ -37,7 +37,32 @@ text-align: center;
 /* Tablet */
 
 @media (min-width: 460px){
+    .home header{
+        padding-bottom: 20px;
+    }
     .home header button{
         display: none;
     }
+    .home header ul{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        font-size: 15px;
+    }
+
+    .home header ul li{
+        width: 15%;
+        font-size: 0.5rem;
+    }
+}
+
+@media (min-width: 560px){
+    .home header ul li{
+        width: 16%;
+        font-size: 68%;
+    }
+}
+
+@media (min-width: 780px){
+
 }
