--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,7 @@
             </article>
             <!-- 2 -->
             <article>
-                <div>
+                <div class="image">
                     <img class="producto" src="/images/img-pdto-2.jpg" alt="">
                     <img class="etiqueta" src="/images/img-gratis.png" alt="">
                     <a href="/" class="ampliar">ampliar foto</a>
@@ -54,7 +54,7 @@
             </article>
             <!-- 3 -->
             <article>
-                <div>
+                <div class="image">
                     <img class="producto" src="/images/img-pdto-3.jpg" alt="">
                     <img class="etiqueta" src="/images/img-descuento.png" alt="">
                     <a href="">ampliar foto</a>
@@ -65,7 +65,7 @@
             </article>
             <!-- 4 -->
             <article>
-                <div>
+                <div class="image">
                     <img class="producto" src="/images/img-pdto-1.jpg" alt="">
                     <img class="etiqueta" src="/images/img-nuevo.png" alt="">
                     <a href="/" class="ampliar">ampliar foto</a>
@@ -76,7 +76,7 @@
             </article>
             <!-- 5 -->
             <article>
-                <div>
+                <div class="image">
                     <img class="producto" src="/images/img-pdto-2.jpg" alt="">
                     <img class="etiqueta" src="/images/img-gratis.png" alt="">
                     <a href="/" class="ampliar">ampliar foto</a>
@@ -87,7 +87,7 @@
             </article>
             <!-- 6 -->
             <article>
-                <div>
+                <div class="image">
                     <img class="producto" src="/images/img-pdto-3.jpg" alt="">
                     <img class="etiqueta" src="/images/img-descuento.png" alt="">
                     <a href="/" class="ampliar">ampliar foto</a>
