--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -2,6 +2,7 @@
     --colorGris:#707070;
     --colorBlanco:#fff;
     --colorNegro:#000;
-    --colorRojo:#b4171e;
+    --colorRojo:#b80000;
     --colorTransparente:#0000007b;
+    --colorAmarillo: #e9e03f;
 }
