--- a/views/index.html
+++ b/views/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <h3>Lorem ipsum amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
-                <a href="#">ver más</a>
+                <a href="#" class="link">ver más</a>
             </article>
             <!-- 2 -->
             <article>
@@ -50,18 +50,18 @@
                 </div>
                 <h3>Lorem ipsum amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
-                <a href="#">ver más</a>
+                <a href="#" class="link">ver más</a>
             </article>
             <!-- 3 -->
             <article>
                 <div class="image">
                     <img class="producto" src="/images/img-pdto-3.jpg" alt="">
                     <img class="etiqueta" src="/images/img-descuento.png" alt="">
-                    <a href="">ampliar foto</a>
+                    <a href="/" class="ampliar">ampliar foto</a>
                 </div>
                 <h3>Lorem ipsum amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
-                <a href="#">ver más</a>
+                <a href="#" class="link">ver más</a>
             </article>
             <!-- 4 -->
             <article>
@@ -72,7 +72,7 @@
                 </div>
                 <h3>Lorem ipsum amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
-                <a href="#">ver más</a>
+                <a href="#" class="link">ver más</a>
             </article>
             <!-- 5 -->
             <article>
@@ -83,7 +83,7 @@
                 </div>
                 <h3>Lorem ipsum amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
-                <a href="#">ver más</a>
+                <a href="#" class="link">ver más</a>
             </article>
             <!-- 6 -->
             <article>
@@ -94,7 +94,7 @@
                 </div>
                 <h3>Lorem ipsum amet</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ex qui illum numquam consectetur iusto illo et quos amet exercitationem, eius, reprehenderit vero ducimus dolorum repellendus nihil. Voluptatem, molestias ea.</p>
-                <a href="#">ver más</a>
+                <a href="#" class="link">ver más</a>
             </article>
         </section>
     </main>
