--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -2,16 +2,66 @@ footer{
     text-align: center;
 }
 
-.home footer ul li{
-    background-color: var(--colorGris);
+.home footer ul li {
+    background-color: #ffffff00;
     padding: 10px;
     margin: 2px 0;
+}
 
-} 
-
-.home footer ul li a{
+.home footer ul li a {
     color: var(--colorBlanco);
     text-transform: uppercase;
 }
 
-/* Esta es la primer parte de kitchening */
+@media (min-width: 769px){
+    footer{
+        background-color:var(--colorRojo);
+        border-radius: 25px 25px 0 0;
+        height: 250px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .home footer ul{
+        display: flex;
+        justify-content: center;
+    }
+    .home footer ul li{
+        background-color: hsla(0, 0% 100%, 0);
+        padding: 5px 20px;
+        /* margin: 2px 0; */
+        border-left: 2px solid var(--colorBlanco) ;
+    }
+    .home footer ul li:first-child{
+        border-left: none;
+
+    }
+    .home footer ul li a{
+        text-transform: capitalize;
+        font-weight: bold;
+    }
+
+}
+/*     .home footer ul li{
+        background-color: hsla(0, 0% 100%, 0);
+        padding: 5px 20px;
+        margin: 2px 0;
+        border-left:2px solid var(--colorBlanco) ;
+    }
+}
+/*
+.home footer ul{
+    display: flex;
+    justify-content:center;
+
+}
+
+.home footer ul li:first-child{
+    border-left: none;
+}
+.home footer ul li a{
+    text-transform: capitalize;
+    font-weight: bold;
+}
+*/
