--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,18 @@
     position: relative;
 }
 
+.home main section .image:hover .producto{
+position: relative;
+transform: scale(1.2);
+transition: all 0.5s;
+z-index: 10;/* z-index por defecto es 1 */
+}
+.home main section .image:hover .etiqueta{
+    transform:translateX(30px) translateY(-20px) scale(1.1);
+    z-index: 10;
+    transition: all 0.5s;
+
+}
 
 .home main section .producto{
     width: 100%;
@@ -41,6 +53,9 @@
     /* text-align: center; */
     padding: 10px;
 }
+.home main section a.link:hover{
+    background-color: var(--colorRojo);
+}
 .home main section .ampliar{
     display:block ;
     text-align: center;
@@ -55,7 +70,6 @@
     font-weight: bold;
 }
 
-.home main section {}
 
 /* Tablet */
 
